HTTP API: added metrics & progress
